    read-only flags. Removed documentation on the deleted "multifile_directive"
    flag. Added missing documentation on the "prolog_compatible_version" flag.

    Added support for accessing the compiler input stream using the built-in
    predicate logtalk_load_context/2 with the key "stream".

    Improved compile-time and runtime error handling for the blackboard
    built-in predicates.

    Corrected a bug where abolishing a dynamic category or a dynamic protocol
    compiled in debug mode would fail to update the internal table of entities
    compiled in debug mode.

    Corrected a bug in the processing of meta-calls when the called goal is
    an explicit message to an object where the receiver instead of the sender
    would be tested for events support.

    Corrected a static binding bug where meta-predicates called within other
    meta-predicates would not be correctly compiled. This bug prevented the
    "mtbatch" from running.

    Removed references to the de facto standard predicates retractall/1,
    compare/3, and callable/1 from all the config files of Prolog compilers
    where these predicates are built-in.

    Added declaration of file name extensions for intermediate files generated
    by the Prolog compilers themselves to the config files of B-Prolog, Ciao,
    Qu-Prolog, and XSB.

    Updated the Qu-Prolog config file with support for accessing environment
    variables and updated definitions of file-system access predicates that
    avoid issues with file paths containing spaces. Logtalk now requires
    Qu-Prolog 8.12 or a later version.

    Updated the GNU Prolog config file in order to support the built_in_fd/0,
    built_in_fd/1, built_in/0, built_in/1, and ensure_linked/1 proprietary
    directives.

    Workaround a B-Prolog 7.4 bug where the built-in predicate callable/1 is
    missing the property "built_in".

    Updated the Qu-Prolog integration files in order to avoid a segmentation